GNOME Bugzilla – Bug 642001
Broken: "Automatically unlock this keyring whenever I'm logged in"
Last modified: 2011-03-09 16:46:50 UTC
The RadioButton "Automatically unlock this keyring whenever I'm logged in" is most likely broken. This affects at least the "secrets" component. The "ssh" component does not suffer this problem. Whenever the "login" keyring is unlocked, the dialogue box to unlock a keyring presents this RadioButton as disabled (greyed-out). Whenever the "login" keyring is locked, this RadioButton is enabled (able to be clicked). Obviously, it becomes impossible to to mark any keyring as automatically unlocked upon login. I've tested with the default keyring, "default", and a brand-new keyring "test". The "ssh" component demonstrates the exact opposite behaviour which IMO is correct. Software: gnome-keyring 2.32.1 Linux 2.6.37-ARCH #1 SMP PREEMPT i686 Intel CPU T2400 @ 1.83GHz GNU/Linux
Thanks for catching this problem. Sorry for the dumb broken behavior. I've committed a fix: commit ed3f1e9f97a4466a4b3cd2f1608b347393857a9d Author: Stef Walter <stefw@collabora.co.uk> Date: Wed Mar 9 17:45:38 2011 +0100 [wrap-layer] Fix inability to save password for other keyrings. Fix the "Automatically unlock this keyring whenever I'm logged in" The logic for enabling the setting was inversed. https://bugzilla.gnome.org/show_bug.cgi?id=642001