[wrap-layer] Fix inability to save password for other keyrings.

Fix the "Automatically unlock this keyring whenever I'm logged in"
The logic for enabling the setting was inversed.

https://bugzilla.gnome.org/show_bug.cgi?id=642001